# exam-topics-quiz

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_exam.html
config/: extractor.yaml  questionnaire.yaml
data/exams/gcp-ml-engineer-full/: extraction_report.json  metadata.json
data/exams/gcp-ml-engineer-full/discussions/: question_100_discussion.json  question_101_discussion.json  question_102_discussion.json  question_103_discussion.json  question_104_discussion.json  question_105_discussion.json  question_106_discussion.json  question_107_discussion.json  question_108_discussion.json  question_109_discussion.json  question_10_discussion.json  question_110_discussion.json  question_111_discussion.json  question_112_discussion.json  question_113_discussion.json  question_114_discussion.json  question_115_discussion.json  question_116_discussion.json  question_117_discussion.json  question_118_discussion.json  question_119_discussion.json  question_11_discussion.json  question_120_discussion.json  question_121_discussion.json  question_122_discussion.json  question_123_discussion.json  question_124_discussion.json  question_125_discussion.json  question_126_discussion.json  question_127_discussion.json  question_128_discussion.json  question_129_discussion.json  question_12_discussion.json  question_130_discussion.json  question_131_discussion.json  question_132_discussion.json  question_133_discussion.json  question_134_discussion.json  question_135_discussion.json  question_136_discussion.json  (+281 more)
data/exams/gcp-ml-engineer-full/questions/: question_001.json  question_002.json  question_003.json  question_004.json  question_005.json  question_006.json  question_007.json  question_008.json  question_009.json  question_010.json  question_011.json  question_012.json  question_013.json  question_014.json  question_015.json  question_016.json  question_017.json  question_018.json  question_019.json  question_020.json  question_021.json  question_022.json  question_023.json  question_024.json  question_025.json  question_026.json  question_027.json  question_028.json  question_029.json  question_030.json  question_031.json  question_032.json  question_033.json  question_034.json  question_035.json  question_036.json  question_037.json  question_038.json  question_039.json  question_040.json  (+281 more)
data/input/: page-1.html  page-2.html  page-3.html  page-4.html  page-5.html  page-6.html  page-7.html
docs/: design-document.md
scripts/: download_examtopics_html.py
src/cert_examtopics_quiz/: __init__.py  cli.py  main.py
src/cert_examtopics_quiz/config/: __init__.py  gcp.py  settings.py
src/cert_examtopics_quiz/extractor/: __init__.py  auth.py  parser.py  scraper.py  storage.py
src/cert_examtopics_quiz/models/: __init__.py  extraction.py  question.py  session.py
src/cert_examtopics_quiz/questionnaire/: __init__.py  cli.py  engine.py  loader.py
src/cert_examtopics_quiz/utils/: __init__.py  auth.py  prompts.py
tests/: __init__.py  test_main.py
